--- a/components/header.html
+++ b/components/header.html
@@ -3,10 +3,10 @@
     <div class="logo">Z</div>
     
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#projects">Featured Gallery</a></li>
-        <li><a href="index.html#skills">Skills</a></li>
-        <li><a href="index.html#about">About</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/index.html#projects">Featured Gallery</a></li>
+        <li><a href="/index.html#skills">Skills</a></li>
+        <li><a href="/index.html#about">About</a></li>
         <li><a href="pages/projects.html">All Projects</a></li>
         <li><a href="pages/blog.html">Blog</a></li>
     </ul>
@@ -25,10 +25,10 @@
     <div class="overlay-menu-content">
         <button class="overlay-menu-close" id="menuClose">✕</button>
         <ul class="overlay-menu-links">
-            <li><a href="index.html" class="overlay-link active">Home</a></li>
-            <li><a href="index.html#projects" class="overlay-link">Featured Gallery</a></li>
-            <li><a href="index.html#skills" class="overlay-link">Skills</a></li>
-            <li><a href="index.html#about" class="overlay-link">About</a></li>
+            <li><a href="/index.html" class="overlay-link active">Home</a></li>
+            <li><a href="/index.html#projects" class="overlay-link">Featured Gallery</a></li>
+            <li><a href="/index.html#skills" class="overlay-link">Skills</a></li>
+            <li><a href="/index.html#about" class="overlay-link">About</a></li>
             <li><a href="pages/projects.html" class="overlay-link">All Projects</a></li>
             <li><a href="pages/blog.html" class="overlay-link">Blog</a></li>
         </ul>
